--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <table>
-    <td><img src="Photo.JPG"> </td>
+    <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQEYB45gBXfVZA/profile-displayphoto-shrink_400_400/0/1591113098132?e=1634774400&v=beta&t=LoMZKUSC7EoxOMgEDy9IETVTcA6f1i8_o4CaxBsUICY"> </td>
 <td>
 <h1>Kamalesh Prabakar</h1>
 <h2>B.E Mechatronics</h2>
