--- a/Contactme.html
+++ b/Contactme.html
@@ -8,7 +8,7 @@
 <body>
     <forms method="get">
         <label for="2">Name</label>
-         <input type="Text" name="Name:" placeholder="password" size="30" id =2>
+         <input type="Text" name="Name:" placeholder="Name" size="30" id =2>
         <br/>
         <br/>
         <label for="1">Email</label>
