--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>B.E Mechatronics</h2>
     <p>Hardworking and goal-oriented person seeking a challenging career in the technical<br> domain to 
 utilize my skills for the organization and individual growth.</p>
-    <p><a href="https://www.linkedin.com/in/p-kamalesh/">LinkedIn</a> | Contact No: 8838682284 | Email:Kamaleshp.citmct2017@gmail.com<a href="Contactme.html">| Appointments</a></p></td>
+    <p><a href="https://www.linkedin.com/in/p-kamalesh/">LinkedIn</a> | Contact No: 8838682284 | Email:Kamaleshp.citmct2017@gmail.com<a href="Contactme.html" target="_blank">| Appointments</a></p></td>
     
 </table>
 <hr>
